parks parks parks.....

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -36,7 +36,7 @@
             </form>
           </li>
           <li>
-            <a href="/user/parks">PARKS</a>
+            <a href="/parks">PARKS</a>
           </li>
           {{/if}}
 
