--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,6 +2,6 @@
     <label for="username">Username</label>
     <input type="text" name="username" id="username" required placeholder="Username">
     <label for="password">Password</label> 
-    <input type="text" name="password" id="password" required placeholder="Password">
+    <input type="password" name="password" id="password" required placeholder="Password">
     <button type="submit">Login</button>
 </form>
