modified readme, changed name of park.hbs to parks.hbs, changed layout so that when user logs in he is taken to parks.hbs

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
-  <body>
+  {{!-- <body>
     <header>
       <nav>
         <ul>
@@ -16,7 +16,7 @@
           </li>
         </ul>
       </nav>
-    </header>
+    </header> --}}
 
       <nav>
         <ul>
@@ -35,9 +35,9 @@
               <button type="submit">Logout</button>
             </form>
           </li>
-          <li>
+          {{!-- <li>
             <a href="/parks">PARKS</a>
-          </li>
+          </li> --}}
           {{/if}}
 
     {{{body}}}
