--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -35,6 +35,9 @@
               <button type="submit">Logout</button>
             </form>
           </li>
+          <li>
+            <a href="/parks/create"></a>
+          </li>
           {{!-- <li>
             <a href="/parks">PARKS</a>
           </li> --}}
