--- a/views/parksList.hbs
+++ b/views/parksList.hbs
@@ -1,4 +1,4 @@
 <h3>PARKS:</h2>
 <h2>Welcome {{currentUser.username}}</h2>
-<p>Here you will find acreate list of parks available in Barcelona</p>
-<a href="/park/create">Add a park</a>
+<p>Here you will find a list of parks available in Barcelona</p>
+<a href="/parks/create">Add a park</a>
