--- a/views/createPark.hbs
+++ b/views/createPark.hbs
@@ -1,8 +1,8 @@
 <form action="/parks/create" method="POST">
   <label for="address">Address</label>
   <input type="text" name="address" id="address" required>
-  <label for="image">Image</label>
-  <input type="text" name="cuisine" id="cuisine" required>
+  <label for="imageUrl">Image</label>
+  <input type="text" name="imageUrl" id="imageUrl" required>
   <label for="additionalInfo">Additional information</label>
   <input type="text" name="additional info " id="duration">
   <button type="submit">Add the park!</button>
