tiny changes: include titles in hbs files, apply CSS boilerplate

--- a/views/createPark.hbs
+++ b/views/createPark.hbs
@@ -1,3 +1,4 @@
+<h1>CREATE PARK FORM PAGE</h1>
 <form action="/parks/create" method="POST">
   <label for="address">Address</label>
   <input type="text" name="address" id="address" required>
