--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,4 @@
+<h1>LOGIN FORM PAGE</h1>
 <form action="/auth/login" method="POST">
     <label for="username">Username</label>
     <input type="text" name="username" id="username" required placeholder="Username">
