--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,3 +1,4 @@
+<h1>SIGNUP FORM PAGE</h1>
 <form action="/auth/signup" method="POST">
     <label for="username">Username</label>
     <input type="text" name="username" id="username" required placeholder="Username">
