created parkDetails.hbs and linked it to the edit form (does not work yet), did nothing up updatePark

--- a/views/createPark.hbs
+++ b/views/createPark.hbs
@@ -5,6 +5,6 @@
   <label for="imageUrl">Image</label>
   <input type="text" name="imageUrl" id="imageUrl" required>
   <label for="additionalInfo">Additional information</label>
-  <input type="text" name="additional info " id="duration">
+  <input type="text" name="additionalInfo" id="additionalInfo">
   <button type="submit">Add the park!</button>
 </form>
