--- a/views/createGym.hbs
+++ b/views/createGym.hbs
@@ -1,10 +1,10 @@
-<h1>CREATE PARK FORM PAGE</h1>
-<form action="/parks/create" method="POST">
+<h1>CREATE GYM FORM PAGE</h1>
+<form action="/gyms/create" method="POST">
   <label for="address">Address</label>
   <input type="text" name="address" id="address" required>
   <label for="imageUrl">Image</label>
   <input type="text" name="imageUrl" id="imageUrl" required>
   <label for="additionalInfo">Additional information</label>
   <input type="text" name="additionalInfo" id="additionalInfo">
-  <button type="submit">Add the park!</button>
+  <button type="submit">Add the gym!</button>
 </form>
