add title to splash screen in layout.hbs

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,8 @@
       <nav>
         <ul>
           {{#unless currentUser}}
+          <h1>Hidden Gym</h1>
+          <p>Hidden Gym is the simplest way to find outdoor gyms in Barcelona</p>
           <li>
             <a href="/auth/signup">SIGNUP</a>
           </li>
