--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,13 +29,21 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 147%;
+  background-color: black;
+  color: white;
 }
 
-h1 {}
+h1 {
 
-h2 {}
+}
 
-h3 {}
+h2 {
+
+}
+
+h3 {
+
+}
 
 p {
   margin: 0;
@@ -44,6 +52,24 @@ p {
 
 
 /* ---- layout ---- */
+
+
+.wrapper {
+  background-image: url("https://slack-imgs.com/?c=1&o1=ro&url=http%3A%2F%2Fholdenoberbuergermeister.de%2Fwp-content%2Fuploads%2F540_geodir_photo_Barcelona-Spanish-Course-461.jpg");
+  background-repeat: no-repeat;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.titles {
+  display: flex;
+}
+
+.buttons {
+  display: flex;
+  align-self: center;
+}
 
 #site-header {
   padding: 30px 0;
