--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,16 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
       <nav>
-        <ul>
           {{#unless currentUser}}
           <h1>Hidden Gym</h1>
           <p>Hidden Gym is the simplest way to find outdoor gyms in Barcelona</p>
-          <li>
-            <a href="/auth/signup">SIGNUP</a>
-          </li>
-          <li>
-            <a href="/auth/login">LOGIN</a>
-          </li>
+            <form action="/auth/signup" method="POST">
+              <button type="submit">SIGNUP</button>
+            </form>
+          
+          
+            <form action="/auth/login" method="POST">
+              <button type="submit">LOGIN</button>
+            </form>
+          
           {{/unless}}
 
           {{#if currentUser}}
