working within index.hbs to create the splash screen and the login / signup screen seperation. when user is logged out, all they see are the buttons to either login in and sign up.

--- a/views/createGym.hbs
+++ b/views/createGym.hbs
@@ -6,6 +6,9 @@
   
   <label for="imageUrl">Image</label>
   <input type="text" name="imageUrl" id="imageUrl" required>
+
+  <label for="equipmentAvailable">Equipment Available</label>
+  <input type="text" name="equipmentAvailable" id="equipmentAvailable">
   
   <label for="additionalInfo">Additional information</label>
   <input type="text" name="additionalInfo" id="additionalInfo">
