--- a/views/gymDetails.hbs
+++ b/views/gymDetails.hbs
@@ -5,7 +5,7 @@
 
 <img src="{{imageUrl}}" alt="">
 <h3>Equipment Available: </h3>
-
+  <p>{{equipmentAvailable}}</p>
 <h3>Additional Information: 
   <p>{{additionalInfo}}</p>
 </h3>
