--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,4 @@
-<h1>LOGIN FORM PAGE</h1>
+<h1>LOGIN</h1>
 <form action="/auth/login" method="POST">
     <label for="username">Username</label>
     <input type="text" name="username" id="username" required placeholder="Username">
@@ -6,3 +6,6 @@
     <input type="password" name="password" id="password" required placeholder="Password">
     <button type="submit">Login</button>
 </form>
+<div>
+    <a href="/auth/signup">Don't have an account?</a>
+</div>
