--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,4 +1,4 @@
-<h1>SIGNUP FORM PAGE</h1>
+<h1>SIGNUP</h1>
 <form action="/auth/signup" method="POST">
     <label for="username">Username</label>
     <input type="text" name="username" id="username" required placeholder="Username">
@@ -6,3 +6,8 @@
     <input type="password" name="password" id="password" required placeholder="Password">
     <button type="submit">Sign Up!</button>
 </form>
+
+<div>
+    <a href="/auth/login">Already have an account?</a>
+</div>
+
