--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,6 +38,7 @@ h1 {
 }
 
 h2 {
+  color: orangered;
 
 }
 
@@ -62,13 +63,27 @@ p {
   flex-direction: column;
 }
 
-.titles {
-  display: flex;
+.img-splash {
+  display: block;
+  margin-left: auto;
+  margin-right: auto
 }
 
-.buttons {
+.titles-splash {
   display: flex;
-  align-self: center;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 20em
+}
+
+.buttons-section {
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+  width: 20em
 }
 
 #site-header {
@@ -129,3 +144,4 @@ section.testimonials {
 section.testimonials .button {
   margin-bottom: 10px;
 }
+
