--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,17 +1,32 @@
+ <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  </head>
  <div>
     {{#unless currentUser}}
+      
+      <img class="img-splash" src="./images/push_up.png">
+      
+
+      <section class="titles-splash">
         <div>
-          <h1>Hidden Gym</h1>
-          <p>Hidden Gym is the simplest way to find outdoor gyms in Barcelona</p>
+          <h2>Hidden Gym</h2>
+          <h3>Hidden Gym is the simplest way to find outdoor gyms in Barcelona</h3>
+        </div>
+      </section>
+        
+      <section class="buttons-section">
+        <div>
+          <a href="/auth/signup">SIGNUP</a>
         </div>
         <div>
-          <div>
-            <a href="/auth/signup">SIGNUP</a>
-          </div>
-          <div>
-            <a href="/auth/login">LOGIN</a>
-          </div>
+          <a href="/auth/login">LOGIN</a>
         </div>
+      </section>
     {{/unless}}
 </div>
 
