--- a/views/gymDetails.hbs
+++ b/views/gymDetails.hbs
@@ -4,8 +4,9 @@
 
 
 <img src="{{imageUrl}}" alt="">
-<h3>Equipment Available: </h3>
+<h3>Equipment Available: 
   <p>{{equipmentAvailable}}</p>
+</h3>
 <h3>Additional Information: 
   <p>{{additionalInfo}}</p>
 </h3>
