--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,13 +1,21 @@
+<section class="login-signup-display">
 <h2>SIGNUP</h2>
-<form action="/auth/signup" method="POST">
-    <label for="username">Username</label>
+<div id="parent_login_signup">
+<form id="form_login_signup" action="/auth/signup" method="POST">
+    <label for="username"></label>
     <input type="text" name="username" id="username" required placeholder="Username">
-    <label for="password">Password</label> 
+    <br>
+    <label for="password"></label> 
     <input type="password" name="password" id="password" required placeholder="Password">
+    <br>
     <button type="submit">Sign Up!</button>
 </form>
-
+</div>
+<section class="signup-login-button">
 <div>
     <a href="/auth/login">Already have an account?</a>
 </div>
+
+</section>
+</section>
 
