--- a/views/gymDetails.hbs
+++ b/views/gymDetails.hbs
@@ -3,7 +3,7 @@
 
 
 
-<img src="{{imageUrl}}" alt="">
+<img src="{{image}}" alt="gym photo">
 <h3>Equipment Available: </h3>
   <p>{{equipmentAvailable}}</p>
 <h3>Additional Information: 
