--- a/views/createGym.hbs
+++ b/views/createGym.hbs
@@ -1,11 +1,11 @@
 <h3>Create Hidden Gym:</h3>
 
-<form action="/gyms/create" method="POST">
+<form action="/gyms/create" method="POST" enctype="multipart/form-data">
   <label for="address">Address</label>
   <input type="text" name="address" id="address" required>
   
-  <label for="imageUrl">Image</label>
-  <input type="text" name="imageUrl" id="imageUrl" required>
+  <label for="photo">Upload an Image</label>
+  <input type="file" name="photo" />
 
   <label for="equipmentAvailable">Equipment Available</label>
   <input type="text" name="equipmentAvailable" id="equipmentAvailable">
