--- a/views/gymsList.hbs
+++ b/views/gymsList.hbs
@@ -2,7 +2,7 @@
 <h3>HIDDEN GYMS IN BARCELONA- </h3>
 
 
-<ul>
+<ul class="gyms-list">
     {{#each gyms}}
         <li>
             <a href="/gyms/{{_id}}/details">
@@ -13,8 +13,4 @@
             </a>
         </li>
     {{/each}}
-    
 </ul>
-
-
-
