--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
  <div>
     {{#unless currentUser}}
       
-      <img class="img-splash" src="./images/push_up.png">
+      <img class="img-splash" src="./images/pullup.png">
       
 
       <section class="titles-splash">
