--- a/views/gymsList.hbs
+++ b/views/gymsList.hbs
@@ -1,5 +1,7 @@
-<h2>Welcome to Hidden Gym, {{currentUser.username}}!</h2>
-<h3>HIDDEN GYMS IN BARCELONA- </h3>
+ <section class="welcome-title">
+    <h2>Welcome to Hidden Gym, {{currentUser.username}}!</h2>
+    <h3>HIDDEN GYMS IN BARCELONA- </h3>
+ </section>
 
 
 <section class="gyms-list">
