--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,22 +7,28 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
-     
-    {{#if currentUser}}
-      <ul>
-        <li>
-          <form action="/auth/logout" method="POST">
-            <button type="submit">Logout</button>
-          </form>
-        </li>
-        <li>
-          <a href="/gyms">Hidden Gyms</a>
-        </li>
-        <li>
-          <a href="/gyms/create">Add A Gym</a>
-        </li>
-      </ul>
-    {{/if}}
+      {{#if currentUser}}
+      <nav>
+        <ul>
+          <li>***
+            <ul>
+              <li>
+              <a href="/gyms">Hidden Gyms</a>
+              </li>
+              <li>
+              <a href="/gyms/create">Add A Gym</a>
+              </li>
+              <li>
+              <form action="/auth/logout" method="POST">
+              <button type="submit">Logout</button>
+              </form>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+       {{/if}}
     {{{body}}}
+
   </body>
 </html>
