--- a/views/updateGym.hbs
+++ b/views/updateGym.hbs
@@ -3,7 +3,7 @@
 
 
 
-<img src="{{imageUrl}}" alt="">
+<img src="{{image}}" alt="">
 <h3>Equipment Available: </h3>
   <p>{{equipmentAvailable}}</p>
 <h3>Additional Information: 
@@ -11,7 +11,7 @@
 </h3>
   <p>This Hidden Gym was listed by: {{creator}}</p>
 
-<form action="/gyms/{{_id}}/details/edit" method="POST">
+<form action="/gyms/{{_id}}/details/edit" method="POST" enctype="multipart/form-data">
   <label for="address">NEW Location Descriptor:</label>
   <input type="text" name="address" id="address" value="{{address}}">
 
@@ -21,8 +21,8 @@
   <label for="additionalInfo">MORE Additional Information: </label>
   <input type="text" name="additionalInfo" id="additionalInfo" value="{{additionalInfo}}">
   
-  <label for="imageUrl">NEW Image</label>
-  <input type="text" name="imageUrl" id="imageUrl" value="{{imageUrl}}">
+  <label for="photo">Upload an Image</label>
+  <input type="file" name="photo" id="photo" value="{{image}}"/>
   
   <button type="submit">Update Hidden Gym!</button>
 </form>
