--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,15 +1,17 @@
 <section class="login-signup-display">
 
-<h2>LOGIN</h2>
+<h2>Welcome Back!</h2>
 <div id="parent_login_signup">
 <form id="form_login_signup" action="/auth/login" method="POST">
-    <label for="username"></label>
+    <label for="username">USERNAME</label>
     <input type="text" name="username" id="username" required placeholder="Username">
     <br>
-    <label for="password"></label> 
+    <label for="password">PASSWORD</label> 
     <input type="password" name="password" id="password" required placeholder="Password">
     <br>
+    <section class="submit-login-button">
     <button type="submit">Login</button>
+    </section>
 </form>
 </div>
 
