--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,11 +1,11 @@
 <section class="login-signup-display">
-<h2>SIGNUP</h2>
+<h2>Join us!</h2>
 <div id="parent_login_signup">
 <form id="form_login_signup" action="/auth/signup" method="POST">
-    <label for="username"></label>
+    <label for="username">USERNAME</label>
     <input type="text" name="username" id="username" required placeholder="Username">
     <br>
-    <label for="password"></label> 
+    <label for="password">PASSWORD</label> 
     <input type="password" name="password" id="password" required placeholder="Password">
     <br>
     <button type="submit">Sign Up!</button>
