--- a/views/createGym.hbs
+++ b/views/createGym.hbs
@@ -4,16 +4,16 @@
 
 <form action="/gyms/create" method="POST" enctype="multipart/form-data">
   <label for="address">ADDRESS</label>
-  <input style="width:200px" type="text" name="address" id="address" required>
+  <input style="width:90vw" type="text" name="address" id="address" required>
   <br>
   <label for="photo">UPLOAD AN IMAGE</label>
   <input type="file" name="photo"/>
   <br>
   <label for="equipmentAvailable">EQUIPMENT</label>
-  <input style="width:200px"type="text" name="equipmentAvailable" id="equipmentAvailable">
+  <input style="width:90vw"type="text" name="equipmentAvailable" id="equipmentAvailable">
   <br>
   <label for="additionalInfo">ADDITIONAL INFO</label>
-  <input style="width:200px" type="text" name="additionalInfo" id="additionalInfo">
+  <input style="width:90vw" type="text" name="additionalInfo" id="additionalInfo">
   <br>
   <button type="submit">ADD!</button>
 </form>
