--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,17 +9,17 @@
     <label for="password">PASSWORD</label> 
     <input type="password" name="password" id="password" required placeholder="Password">
     <br>
-    <section class="submit-login-button">
-    <button type="submit">Login</button>
-    </section>
+    <button type="submit">LOGIN</button>
 </form>
 </div>
 
-<section class="signup-login-button">
-    <div>
-        <a href="/auth/signup">Don't have an account?</a>
-    </div>
-</section>
 
+<section class="buttons-section">
+<div>
+</div>
+<div>
+    <a href="/auth/signup">Don't have an account?</a>
+</div>
+</section>
 
 </section>
