--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -8,14 +8,17 @@
     <label for="password">PASSWORD</label> 
     <input type="password" name="password" id="password" required placeholder="Password">
     <br>
-    <button type="submit">Sign Up!</button>
+    <button type="submit">SIGNUP</button>
 </form>
 </div>
-<section class="signup-login-button">
-<div>
-    <a href="/auth/login">Already have an account?</a>
-</div>
 
-</section>
+    <section class="buttons-section">
+    <div>
+    </div>
+    <div>
+        <a href="/auth/login">Already have an account?</a>
+    </div>
+    </section>
+
 </section>
 
